kubernetes_manifests/traefik/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  labels:
    k8s-app: traefik-ingress-lb
spec:
  type: LoadBalancer
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - port: 80
      name: http
    - port: 443
      name: https
  # externalIPs: # Uncomment these lines if you need external IPs to access the cluster
  #   - 127.0.0.1 # e.g. self-hosted GitLab
  #   - 127.0.0.2 # e.g. self-hosted GitLab runner
