kubernetes_manifests/traefik/01-service-acc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: pyroscope-server
  name: pyroscope-server-ingress
spec:
  rules:
    - host: pyroscope-server.588c0bb4-177a-4791-af15-0ff856600671.k8s.civo.com
      http:
        paths:
          -
            backend:
              service:
                name: pyroscope-server
                port:
                  number: 4040
            path: /
            pathType: "Prefix"
    - host: 588c0bb4-177a-4791-af15-0ff856600671.k8s.civo.com
      http:
        paths:
          -
            backend:
              service:
                name: k8s-sample-app
                port:
                  number: 3000
            path: /
            pathType: "Prefix"
