kubernetes_manifests/traefik/02-web-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: k8s-sample-app-web
  name: k8s-sample-app-web-ingress
spec:
  rules:
    - host: k8s-sample-app-web.3531cd4b-f81c-4135-9de8-c6c88f59b97e.k8s.civo.com
      http:
        paths:
          -
            backend:
              service:
                name: k8s-sample-app-web
                port:
                  number: 3000
            path: /
            pathType: "Prefix"
